<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:contentDescription="@string/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearCarro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo">

        <TextView
            android:id="@+id/txtIntro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/intro_opcao"
            android:text="@string/intro_opcao"
            tools:text="@string/intro_opcao" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/campoAlcool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAlcool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/preco_alcool" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/campoGasolina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtGasolina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/preco_gasolina" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/botao_calcular"
            android:onClick="calcular"
            android:text="@string/botao_calcular"
            tools:text="@string/botao_calcular" />

        <TextView
            android:id="@+id/txtResposta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@"
            android:text="@string/resposta"
            tools:text="@string/resposta" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>